output4.txt
file:///D:/Next%20js/fullstack_machinetest/apps/api/check-r2.js:10
import { assertR2Config } from "./dist/services/r2.service.js";
         ^^^^^^^^^^^^^^
SyntaxError: The requested module './dist/services/r2.service.js' does not provide an export named 'assertR2Config'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:134:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:217:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:316:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:123:5)

Node.js v20.14.0
